<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.PRODUCTS.add_new_product.AddProductFragment">

    <EditText
        android:id="@+id/etNameProduct"
        style="@style/edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/product_name" />

    <EditText
        android:id="@+id/etDecriptionProduct"
        style="@style/edit_text"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:background="@color/grey"
        android:gravity="bottom"
        android:hint="@string/description_of_product"
        android:inputType="text|textMultiLine"
        app:guidelineUseRtl="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNameProduct" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:text="rub"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/etPriceProduct"
        app:layout_constraintStart_toEndOf="@+id/etPriceProduct"
        app:layout_constraintTop_toTopOf="@+id/etPriceProduct" />

    <EditText
        android:id="@+id/etPriceProduct"
        style="@style/edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:ems="5"
        android:gravity="right"
        android:hint="@string/price"
        app:layout_constraintStart_toStartOf="@+id/etDecriptionProduct"
        app:layout_constraintTop_toBottomOf="@+id/etDecriptionProduct"
        tools:text="50 000" />


    <Button
        android:id="@+id/btnAddProduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/app_margin"
        android:text="Add product"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPriceProduct" />

</androidx.constraintlayout.widget.ConstraintLayout>